[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"

[project]
name = "cmeel-console-bridge"
version = "1.0.2.1"
description = "cmeel distribution for console-bridge, A ROS-independent package for logging that seamlessly pipes into rosconsole/rosout for ROS-dependent packages."
requires-python = ">= 3.7"
license = "Zlib"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-console-bridge"

[tool.cmeel]
build-number = 4
py3-none = true
source = "console_bridge"
