[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for console-bridge, A ROS-independent package for logging that seamlessly pipes into rosconsole/rosout for ROS-dependent packages."
license = "Zlib"
name = "cmeel-console-bridge"
requires-python = ">= 3.7"
version = "1.0.2.2"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-console-bridge"

[tool.cmeel]
py3-none = true
run-tests = false
source = "console_bridge"

[tool.tomlsort]
all = true
